--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <img class="img" src="img/arrow-2-3.svg" />
             </div>
             <img class="rectangle-3" src="img/rectangle-5.svg" />
-            <img class="campaign-creators" src="img/campaign-creators-gmsnxqiljp4-unsplash-1.png" />
+            <img class="campaign-creators" src="img/campaign-creators-gMsnXqILjp4-unsplash.jpg" />
             <img class="rectangle-4" src="img/rectangle-6.svg" />
             <img class="digital-marketing" src="img/digital-marketing.svg" />
           </div>
@@ -200,3 +200,4 @@
     </div>
   </body>
 </html>
+
